# bastion

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  bastion-security-audit-prompt.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bastion/: __init__.py  cli.py
bastion/api/: routes.py
bastion/core/: engine.py  manager.py  models.py  monitor.py
bastion/plugins/: __init__.py
bastion/plugins/dns_filter/: __init__.py  blocklist.py
bastion/web/: app.py
bastion/web/templates/: dashboard.html
config/: bastion.example.yaml  rules.example.yaml
docs/: SECURE_DEPLOYMENT.md
tests/: test_dns_filter.py  test_firewall.py
