[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bastion"
version = "0.2.0"
description = "A modern, open-source network gateway and firewall management platform"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "Bastion Contributors"},
]
keywords = ["firewall", "network", "gateway", "nftables", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Firewalls",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "flask>=3.0",
    "pyyaml>=6.0",
    "psutil>=5.9",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
# Install the 'websocket' extra to enable live WebSocket metric push.
# Requires a production WSGI server — see docs/SECURE_DEPLOYMENT.md.
# flask-socketio + eventlet are intentionally excluded from the default
# install: SocketIO(app) wraps app.wsgi_app with engineio middleware that
# breaks plain HTTP request pass-through against Werkzeug 3.x + Python 3.12,
# and eventlet requires process-wide monkey patching incompatible with our
# lazy-import startup pattern.
websocket = [
    "flask-socketio>=5.3",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "types-PyYAML>=6.0.12",
    "pre-commit>=3.4",
]

[project.scripts]
bastion = "bastion.cli:main"

[project.urls]
Homepage = "https://github.com/gbudja/bastion"
Repository = "https://github.com/gbudja/bastion"
Issues = "https://github.com/gbudja/bastion/issues"

[tool.setuptools.packages.find]
include = ["bastion*"]

[tool.setuptools.package-data]
"bastion.web" = ["templates/*.html"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=bastion --cov-report=term-missing"
